# cctech-main

./: plot.gnu
Inventor/: Default.lnk  Inventor Eletrical Project 2026.lnk
Inventor/OpenGL+QT/: CMakelists.txt
Inventor/OpenGL+QT/include/: robotwidget.h
Inventor/OpenGL+QT/src/: main.cpp  robotwidget.cpp
Inventor/inventor P1/: Assembly1.iam  Bolt.ipt  Part1.ipt  Part10.ipt  Part2.ipt  Part4.ipt  Wheel.ipt  axle support.ipt  axle.ipt  nut.ipt  nut2.ipt
Inventor/inventor P1/OldVersions/: Assembly1.0001.iam  Wheel.0001.ipt  axle support.0001.ipt  nut.0001.ipt
MultipleBezier/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  main.cpp
MultipleBezier/Booleanoperations/: booleanoperations.cpp  booleanoperations.h
MultipleBezier/geometry/include/: Shape3D.h  bezier.h
MultipleBezier/geometry/src/: bezier.cpp
Project_3d/: 3d_line  3d_line.cpp  Makefile  line_rotation  plot_cuboid.gnu  plot_cylinder.gnu  plot_sphere.gnu  shape_plotter
Project_3d/application/: main.cpp
Project_3d/geometry/include/: cuboid.h  cylinder.h  geometry.h  robot.h  sphere.h
api_fetching/: README.md  api_fetching.sln
api_fetching/backend/: Program.cs  petroleam_production.cs
extrusion/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  rectangle.h
extrusion/Extrusionwidget/: PolygonExtrusionwidget.cpp  PolygonExtrusionwidget.h
sketcher1/sketcher/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  sketcher.cpp  sketcher.h  sketcher_primitives.h  sketcherwidget.cpp  sketcherwidget.h
stl-intersection/: CMakelists.txt
stl-intersection/include/: glwidget.h  intersection.h  mainwindow.h  point.h  triangle.h
stl-intersection/src/: glwidget.cpp  intersection.cpp  mainwindow.cpp  stlparser.cpp
(+5 files in other folders)
